--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A gaming blog website where you can share your thoughts and ideas about your favorite games!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seeds": "node seeds/index.js",
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/Ccooper9893/Omega-Gaming/issues"
   },
-  "homepage": "https://github.com/Ccooper9893/Omega-Gaming#readme"
+  "homepage": "https://github.com/Ccooper9893/Omega-Gaming#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.0.1",
+    "sequelize": "^6.28.0"
+  }
 }
