--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omega-gaming",
   "version": "1.0.0",
   "description": "A gaming blog website where you can share your thoughts and ideas about your favorite games!",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -22,7 +22,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   }
