--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   }
