--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "express-session-sequelize": "^2.3.0",
+    "handlebars": "^4.7.7",
     "mysql2": "^3.0.1",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.28.0"
   }
 }
